Fix colors for codeblocks with no specified syntax language
codeblocks which have no specified syntax language appear under the
`<code>` tag and these also need the removal of !important in order to
have their output with a smooth background.

--- a/assets/scss/journal.scss
+++ b/assets/scss/journal.scss
@@ -131,7 +131,7 @@ button {
 
 code {
   color: $dark-accent;
-  background: rgba($color-accent, 0.07) !important;
+  background: rgba($color-accent, 0.07);
   padding: 2px 5px;
   border-radius: 3px;
   font-family: $mono-font-list;
